# wire

./: .gitignore  .mise.toml  Dockerfile  MANIFEST  MANIFEST.in  README.md  README.rst  README_MODERN.md  REQUIREMENTS  __init__.py  authorize_tokens.applescript  authorize_tokens.sh  config.py.sample  debug  debug.py  docker-compose.yml  fabfile.py  meinheld.py  message.py  pyproject.toml  run_app.py  script.py  setup.py  tests.py  user.py
.github/workflows/: ci.yml
skeletons/: supervisor.skel
src/wire/: __init__.py  app.py  cli.py  connections.py  crypto.py
src/wire/api/: __init__.py  auth.py
src/wire/models/: __init__.py  async_base.py  async_message.py  async_user.py  base.py  user.py
static/: css_lib  js_lib
static/img/avatar/: Thumbs.db
templates/: main.html
templates/forms/: user.html
tests/: __init__.py  test_crypto.py  test_integration.py
utils/: auth.py  crypto.py  hasher.py  redis.py
wire/: __init__.py  contacts.py  inbox.py  local_settings.py-development  local_settings.py-production  message.py  models.py  settings.py  thread.py  user.py  utils.py  views.py
wire/admin/: __init__.py
wire/frontend/: __init__.py  views.py
wire/frontend/templates/: confirm.html  contacts.html  developers.html  event.html  events.html  inbox.html  intro.html  main.html  respond.html  thread.html  timeline.html
wire/frontend/templates/forms/: event.html  message.html  user.html
wire/models/: contacts.py  event.py  inbox.py  message.py  thread.py  timeline.py  update.py  user.py
wire/static/: font_lib  img_lib
wire/static/css/: main.css
wire/static/css_lib/: subverse.css
wire/static/font_lib/: WC_RoughTrad-webfont.eot
wire/static/img/: Thumbs.db  avatar  event
wire/static/js/: contacts.js  crypto.js  event.js  event_form.js  inbox.js  message_form.js  thread.js  timeline.js  user_form.js
wire/static/js_lib/: common.js  jquery.gMap.js  shiv.js  ui.geo_autocomplete.js
wire/templates/: blog.html  confirm.html  contacts.html  developers.html  event.html  events.html  inbox.html  intro.html  main.html  message.html  news.html  respond.html  status.html  thread.html  timeline.html
wire/templates/forms/: event.html  message.html  user.html
wire/utils/: auth.py  crypto.py  hasher.py  redis.py  skipper.py
